--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                             <h5 class="text-decoration-underline IBMPlex">Mini Project 1 - To Do List</h5>
                             <p class="card-text">Mini Project - 1 <b> A To Do list </b> to organize and prioritize your tasks with the help of HTML, minor CSS and basic JavaScript.</p>
                             <div class="text-center">
-                                <button type="button" class="btn btn-sm btn-outline-dark ">View Project</button>
+                                <button type="button" class="btn btn-sm btn-outline-dark onclick="document.location='MiniProjects/todoList.html'">">View Project</button>
                             </div>
                         </div>
                     </div>
@@ -121,7 +121,7 @@
                             <h5 class="text-decoration-underline IBMPlex">Mini Project 2 - Image Filtering</h5>
                             <p class="card-text">Mini Project - 2 <b>Image Filtering </b> to change the appearance of an image by altering the colors of the pixels and download it for later purpose.
                                 <div class="text-center">
-                                    <button type="button" class="btn btn-sm btn-outline-primary ">View Project</button>
+                                    <button type="button" class="btn btn-sm btn-outline-primary onclick="document.location='MiniProjects/ImageFilter.html'">View Project</button>
                                 </div>
                         </div>
                     </div>
@@ -135,7 +135,7 @@
                             <p class="card-text">Mini Project - 3 <b>The Green Screen Algorithm </b> to change the background of an image which is green color and replace it with any effect or other image. </p>
 
                             <div class="text-center">
-                                <button type="button" class="btn btn-sm btn-outline-success ">View Project</button>
+                                <button type="button" class="btn btn-sm btn-outline-success onclick="document.location='MiniProjects/GreenScreen.html'">View Project</button>
                             </div>
                         </div>
                     </div>
