--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
                         <div class="card-body text-center">
                             <h5 class="text-decoration-underline IBMPlex">Mini Project 1 - To Do List</h5>
-                            <p class="card-text">Mini Project - 1 <b> A To Do list </b> to organize and prioritize your tasks with the help of HTML, minor CSS and basic JavaScript.</p>
+                            <p class="card-text">Mini Project - 1 <b> A To Do list </b> to organize and prioritize your tasks with the help of HTML, minor CSS and basic JavaScript.(ADD, REMOVE and PRIORITIZE functionality added)</p>
                             <div class="text-center">
                                 <button type="button" class="btn btn-sm btn-outline-dark" onclick="document.location='MiniProjects/todoList.html'">View Project</button>
                             </div>
