--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Arvo&family=Coustard:wght@900&family=IBM+Plex+Sans:wght@600&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="Images/display-fill.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="Images/indexLogo.svg" type="image/x-icon">
     <title>Coursela | Foundation of HTML, CSS and JavaScript...</title>
     <link rel="stylesheet" href="CSS/main.css">
 </head>
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="Images/display-fill.svg" alt="" width="33" height="30" class="d-inline-block align-text-top logo me-3"> Mini Projects
+                <img src="Images/indexLogo.svg" alt="" width="33" height="30" class="d-inline-block align-text-top logo me-3"> Mini Projects
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -152,7 +152,7 @@
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex me-4">
             <li class="ms-3">
                 <a class="text-muted" href="#">
-                    <img src="Images/display-fill.svg" alt="" width="33" height="30" class="d-inline-block align-text-top logo me-1">
+                    <img src="Images/indexLogo.svg" alt="" width="33" height="30" class="d-inline-block align-text-top logo me-1">
                 </a>
             </li>
             <li class="ms-3">
