--- a/MiniProjects/GreenScreen.html
+++ b/MiniProjects/GreenScreen.html
@@ -8,15 +8,16 @@
     <title>GreenScreen</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://www.dukelearntoprogram.com/course1/common/js/image/SimpleImage.js"></script>
-    <script src="greenScreen.js"></script>
-    <link rel="stylesheet" href="greenScreen.css">
+    <script src="https://github.com/Km09oct/Coursela-Duke_University/blob/main/JavaScript/greenScreen.js"></script>
+    <link rel="shortcut icon" href="https://github.com/Km09oct/Coursela-Duke_University/blob/main/Images/GreenScreenLogo.svg" type="image/x-icon">
+    <link rel="stylesheet" href="https://github.com/Km09oct/Coursela-Duke_University/blob/main/CSS/greenScreen.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="Images/display-fill.svg" alt="" width="33" height="30" class="d-inline-block align-text-top logo me-3"> Mini Projects
+                <img src="https://github.com/Km09oct/Coursela-Duke_University/blob/main/Images/GreenScreenLogo.svg" alt="" width="33" height="30" class="d-inline-block align-text-top logo me-3"> Mini Projects
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -69,7 +70,7 @@
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex me-4">
             <li class="ms-3">
                 <a class="text-muted" href="https://github.com/Km09oct/" target="_blank">
-                    <img src="Images/github.svg" alt="" width="33" height="30" class="d-inline-block align-text-top logo me-1">
+                    <img src="https://github.com/Km09oct/Coursela-Duke_University/blob/main/Images/github.svg" alt="" width="33" height="30" class="d-inline-block align-text-top logo me-1">
                 </a>
             </li>
         </ul>
