--- a/MiniProjects/GreenScreen.html
+++ b/MiniProjects/GreenScreen.html
@@ -10,7 +10,7 @@
     <script src="https://www.dukelearntoprogram.com/course1/common/js/image/SimpleImage.js"></script>
     <script src="https://github.com/Km09oct/Coursela-Duke_University/blob/main/JavaScript/greenScreen.js"></script>
     <link rel="shortcut icon" href="https://github.com/Km09oct/Coursela-Duke_University/blob/main/Images/GreenScreenLogo.svg" type="image/x-icon">
-    <link rel="stylesheet" href="https://github.com/Km09oct/Coursela-Duke_University/blob/main/CSS/greenScreen.css">
+    <link rel="stylesheet" href="../CSS/greenScreen.css">
 </head>
 
 <body>
