--- a/MiniProjects/ImageFilter.html
+++ b/MiniProjects/ImageFilter.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coursela Image Filter Project</title>
     <script src="https://www.dukelearntoprogram.com/course1/common/js/image/SimpleImage.js"></script>
-    <script src="https://github.com/Km09oct/Coursela-Duke_University/blob/main/JavaScript/ImageFilter.js"></script>
-    <link rel="stylesheet" href="https://github.com/Km09oct/Coursela-Duke_University/blob/d07c7b6c5464facd60aecb0d540c3d24765503b9/CSS/ImageFilter.css">
+    <script src="../JavaScript/ImageFilter.js"></script>
+    <link rel="stylesheet" href="../CSS/ImageFilter.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@1&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="https://github.com/Km09oct/Coursela-Duke_University/blob/main/Images/ImageFilteringLogo.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="../Images/ImageFilteringLogo.svg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="https://github.com/Km09oct/Coursela-Duke_University/blob/main/Images/ImageFilteringLogo.svg" alt="" width="33" height="30" class="d-inline-block align-text-top icon me-3"> Image Filtering
+                <img src="../Images/ImageFilteringLogo.svg" alt="" width="33" height="30" class="d-inline-block align-text-top icon me-3"> Image Filtering
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -79,7 +79,7 @@
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex me-4">
             <li class="ms-3">
                 <a class="text-muted" href="https://github.com/Km09oct/" target="_blank">
-                    <img src="https://github.com/Km09oct/Coursela-Duke_University/blob/main/Images/github.svg" alt="" width="33" height="30" class="d-inline-block align-text-top logo me-1">
+                    <img src="../Images/github.svg" alt="" width="33" height="30" class="d-inline-block align-text-top logo me-1">
                 </a>
             </li>
         </ul>
