--- a/MiniProjects/todoList.html
+++ b/MiniProjects/todoList.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>My To-Do List</title>
-    <script src="todoList.js"></script>
-    <link rel="stylesheet" href="todoList.css">
+    <script src="../JavaScript/todoList.js"></script>
+    <link rel="stylesheet" href="../CSS/todoList.css">
+    <link rel="shortcut icon" href="../Images/TODOLogo.svg" type="image/x-icon">
 </head>
 
 <body>
@@ -16,7 +17,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="aspect-ratio-fill.svg" alt="" width="33" height="30" class="d-inline-block align-text-top icon me-3"> To Do List
+                <img src="../Images/TODOLogo.svg" alt="" width="33" height="30" class="d-inline-block align-text-top icon me-3"> To Do List
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -81,7 +82,7 @@
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex me-4">
             <li class="ms-3">
                 <a class="text-muted" href="https://github.com/Km09oct/" target="_blank">
-                    <img src="Images/github.svg" alt="" width="33" height="30" class="d-inline-block align-text-top logo me-1">
+                    <img src="../Images/github.svg" alt="" width="33" height="30" class="d-inline-block align-text-top logo me-1">
                 </a>
             </li>
         </ul>
