--- a/MiniProjects/todoList.html
+++ b/MiniProjects/todoList.html
@@ -73,7 +73,7 @@
         <input type="button" class="btn btn-primary btn-lg" value="About" onclick="doAbout()">
         <input type="button" class="btn btn-danger btn-lg" value="Clear" onclick="clearAbout()">
     </div>
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-2 my-2  border-top fixed-bottom">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-2 my-2  border-top">
         <div class="col-md-4 d-flex align-items-center mx-3">
             <span class="text-muted"> Repository: @Km09oct/Coursela-Duke_University</span>
             </a>
