--- a/MiniProjects/ImageFilter.html
+++ b/MiniProjects/ImageFilter.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="../Images/ImageFilteringLogo.svg" alt="" width="33" height="30" class="d-inline-block align-text-top icon me-3"> Image Filtering
+                <img src="../Images/ImageFilteringLogo.svg" alt="" width="33" height="30" class="d-inline-block align-text-top logo me-3"> Image Filtering
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -28,7 +28,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="https://km09oct.github.io/Coursela-Duke_University/">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://github.com/Km09oct/" target="_blank">Profile</a>
