--- a/MiniProjects/GreenScreen.html
+++ b/MiniProjects/GreenScreen.html
@@ -25,16 +25,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="https://km09oct.github.io/Coursela-Duke_University/">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://github.com/Km09oct/" target="_blank">Profile</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://www.linkedin.com/in/krunalmistry09/" target="_blank">LinkedIn</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://coursera.org/share/5d9c62ac62e80d1ee84e17f3b692e8fd" target="_blank">Code</a>
                     </li>
                 </ul>
             </div>
