--- a/MiniProjects/todoList.html
+++ b/MiniProjects/todoList.html
@@ -79,7 +79,7 @@
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex me-4">
             <li class="ms-3">
                 <a class="text-muted" href="https://github.com/Km09oct/" target="_blank">
-                    <img src="../Images/github.svg" alt="" width="33" height="30" class="d-inline-block align-text-top logo me-1">
+                    <img src="../Images/github.svg" alt="" width="33" height="30" class="d-inline-block align-text-top icon me-1">
                 </a>
             </li>
         </ul>
